@@ -240,7 +240,9 @@ if ($singlefiles=="0") {
   } 
 } // $singlefiles clause 
 else {
+  if (file_exists("output/scripts.zip")) unlink("output/scripts.zip");
   zip("output", "scripts", "scripts.zip");
+  js_redirect("output/scripts.zip");
 }
 mysql_close();
 }
